--- a/willuser/williamhome.html
+++ b/willuser/williamhome.html
@@ -35,14 +35,17 @@ overflow-y: scroll;
 <meta name="apple-mobile-web-app-capable" content="yes" />
   </head>
 <body>
-  
-<script type="text/javascript" language="JavaScript">
-var acookie = ReadCookie("willlogin");
-if(acookie.length == 0)
- { 
-  location.href='https://swimsets.github.io';
- }
-</script>
+  <script>
+function checkCookie() {
+    var user=getCookie("willlogin");
+    if (user != "") {
+        alert('Welcome');
+    } else {
+       location.href='swimsets.github.io/Sign-In.html
+       }
+    }
+}
+  </script>
   <h1>Welcome!</h1>
   <table id='Will Table'>
     <tr>
