--- a/willuser/williamhome.html
+++ b/willuser/williamhome.html
@@ -41,7 +41,7 @@ function checkCookie() {
     if (user != "") {
         alert('Welcome');
     } else {
-       location.href='swimsets.github.io/Sign-In.html
+       location.href='swimsets.github.io/Sign-In.html';
        }
     }
 }
