--- a/willuser/williamhome.html
+++ b/willuser/williamhome.html
@@ -35,7 +35,7 @@ overflow-y: scroll;
 <meta name="apple-mobile-web-app-capable" content="yes" />
   </head>
 <body>
-  <script>
+  <script type='text/javascript'>
 function checkCookie() {
   if(document.cookie.indexOf("willlogin") == -1){
   alert("You are not loged in!");
