--- a/willuser/williamhome.html
+++ b/willuser/williamhome.html
@@ -35,7 +35,7 @@ overflow-y: scroll;
 <meta name="apple-mobile-web-app-capable" content="yes" />
   </head>
 <body>
-<script type="text/javascript>
+<script>
 
 if(document.cookie.indexOf("willlogin") == -1) {
   alert("There is no cookie by the name of aCookie");
