--- a/willuser/williamhome.html
+++ b/willuser/williamhome.html
@@ -38,10 +38,10 @@ overflow-y: scroll;
 <script>
 
 if(document.cookie.indexOf("willlogin") == -1) {
-  alert("There is no cookie by the name of aCookie");
+  window.location('swimsets.github.io/Sign-In.html');
 }
 else{
-  alert("The aCookie cookie is set!");
+  alert("Welcome William!");
 }
 </script>
   <h1>Welcome!</h1>
