--- a/willuser/williamhome.html
+++ b/willuser/williamhome.html
@@ -38,7 +38,7 @@ overflow-y: scroll;
 <script>
 
 if(document.cookie.indexOf("willlogin") == -1) {
-  window.location('swimsets.github.io/Sign-In.html');
+  location.href("swimsets.github.io");
 }
 else{
   alert("Welcome William!");
