--- a/willuser/williamhome.html
+++ b/willuser/williamhome.html
@@ -38,7 +38,7 @@ overflow-y: scroll;
 <script>
 
 if(document.cookie.indexOf("willlogin") == -1) {
-  location.href("swimsets.github.io");
+  window.location.replace('http://swimsets.github.io');
 }
 else{
   alert("Welcome William!");
