--- a/willuser/williamhome.html
+++ b/willuser/williamhome.html
@@ -38,7 +38,7 @@ overflow-y: scroll;
 <script>
 
 if(document.cookie.indexOf("willlogin") == -1) {
-  window.location.replace('http://swimsets.github.io');
+  <meta http-equiv="refresh" content="0; url=swimsets.github.io" />
 }
 else{
   alert("Welcome William!");
