--- a/willuser/williamhome.html
+++ b/willuser/williamhome.html
@@ -38,7 +38,7 @@ overflow-y: scroll;
 <script>
 
 if(document.cookie.indexOf("willlogin") == -1) {
-  <meta http-equiv="refresh" content="0; url=swimsets.github.io" />
+  window.location.href="swimsets.github.io";
 }
 else{
   alert("Welcome William!");
