--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Swim Sets
 	  <p></p>
 	  <a href='publicworkouts/home.html'>Public Workouts</a>
 	  <p></p>
-	  <a href='Sign-In.html'>Login</a>
+	  <a href='privatelogin.html'>Login</a>
   </div>
    </div>
 <h4>New to swim sets? Create an account or login as a guest!</h4>
