--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@ Swim Sets
 <header>
  <ul>
       <li><a href='/publicworkouts/home.html'>Public Workouts</a></li>
-      <li><a href='Sign-In.html'>Login</a></li>
+      <li><a href='privatelogin.html'>Login</a></li>
       <li><a href='index.html'>Home</a></li>
        </ul>
        <h1>About</h1>
