--- a/privatelogin.html
+++ b/privatelogin.html
@@ -24,6 +24,7 @@ Please select your name
 </h1>
   <ul>
     <li><a href='williamlogin'>William Tyrrell</a></li>
+    <li><a href='jackvivierlogin.html'>Jack Vivier</a></li>
   </ul>
 </body>
 </html>
