--- a/jackvivierlogin.html
+++ b/jackvivierlogin.html
@@ -33,7 +33,7 @@ var time = now.getTime();
 time += 3600 * 1000;
 now.setTime(time);
 document.cookie = 
-'willlogin=' + 1 + 
+'jackvivierlogin=' + 1 + 
 '; expires=' + now.toUTCString() + 
 '; path=/';
                 }
