--- a/privatelogin.html
+++ b/privatelogin.html
@@ -25,6 +25,7 @@ Please select your name
   <ul>
     <li><a href='williamlogin'>William Tyrrell</a></li>
     <li><a href='jackvivierlogin.html'>Jack Vivier</a></li>
+    <li><a href='julianfranklogin.html'>Julian Frank</a></li>
   </ul>
 </body>
 </html>
