--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Swim Sets
 		 
     </style>
 </head>
-<body>
+<body oncontextmenu="return false" onkeydown="return false; " onmousedown="return false; ">
     <script language='javascript'>
        
     </script>
