--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@ Swim Sets
 	  <a href='publicworkouts/home.html'>Public Workouts</a>
 	  <p></p>
 	  <a href='privatelogin.html'>Login</a>
+	  <p></p>
+	  <a href="swimsets.github.io/pace-calculator">Pace Calculator (Beta)</a>
   </div>
    </div>
 <h4>New to swim sets? Create an account or login as a guest!</h4>
