Update and rename index.html to paceindex.html

--- a/paceindex.html
+++ b/paceindex.html
@@ -2,7 +2,7 @@
 <html manifest="pace.appcache">
 <head>
 
- <link rel="stylesheet" type="text/css" href="main.css">
+ <link rel="stylesheet" type="text/css" href="pacemain.css">
  <title>Pace Calculator</title>
  <script>
  function calc500() {
