--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Swim Sets
 	  <p></p>
 	  <a href='privatelogin.html'>Login</a>
 	  <p></p>
-	  <a href="https://swimsets.github.io/pace-calculator">Pace Calculator (Beta)</a>
+	  <a href="paceindex.html">Pace Calculator (Beta)</a>
   </div>
    </div>
 <h4>New to swim sets? Create an account or login as a guest!</h4>
