--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Swim Sets
      }
      body {
          background: url('https://phenomenex.files.wordpress.com/2016/01/water.jpg');
-    
+    text-align: center;
 
      }
      img {
