--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Swim Sets
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 2rem;
+    min-width: 4em;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 12px 16px;
     z-index: 1;
@@ -60,7 +60,7 @@ Swim Sets
     display: block;
 }
 h4 {
-font-size: 4em;	
+font-size: 3em;	
 	 }
 		 
     </style>
