--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@ Swim Sets
  <style>
        ul {
       padding: 10px;
-        background-color: black;
+        background-color: white;
       
     }
     li {
       display: inline;
-      padding: 0px 10px 0px 10px;
+      
     }
     a {
-        color: red;
+        color: black;
      }
      body {
          background: url('https://phenomenex.files.wordpress.com/2016/01/water.jpg');
@@ -62,7 +62,10 @@ Swim Sets
 h4 {
 font-size: 3em;	
 	 }
-		 
+		.nav {
+		background: white;
+			display: inline;
+	 }
     </style>
 </head>
 <body>
@@ -79,17 +82,24 @@ font-size: 3em;
  
        </ul>
 		-->
+		<div type="nav">
+		<ul>
+			<li><a href='about.html'>About</a></li>
+
+			<li> <a href='publicworkouts/home.html'>Public Workouts</a></li>
+
+			<li> <a href='privatelogin.html'>Login</a></li>
+
+			<li> <a href="paceindex.html">Pace Calculator (Beta)</a></li>
+		</ul>
+		</div>
 <img src='welcome.png'>
     <h1> </h1>
    <img src='swimmer.jpg' hight='355' width='370'>
 	
 
    </header>
-		 <div class="container">
- 
-   <div class="dropdown">
-  <img src='https://cdn4.iconfinder.com/data/icons/flat-black/128/menu.png' >
-  <div class="dropdown-content">
+		
    <a href='about.html'>About</a>
 	  <p></p>
 	  <a href='publicworkouts/home.html'>Public Workouts</a>
@@ -97,8 +107,7 @@ font-size: 3em;
 	  <a href='privatelogin.html'>Login</a>
 	  <p></p>
 	  <a href="paceindex.html">Pace Calculator (Beta)</a>
-  </div>
-   </div>
+ 
 <h4>New to swim sets? Create an account or login as a guest!</h4>
  <!-- start of freefind search box html -->
 
