--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@ font-size: 3em;
 		background: white;
 			display: inline;
 	 }
+	 .LHead {
+	     text-align: left;
+	 }
+	 .RHead {
+	     text-align: right;
+	 }
     </style>
 </head>
 <body>
@@ -73,16 +79,12 @@ font-size: 3em;
        
     </script>
 
-	<header>
-<!--
- <ul>
-	 <li><button type='button' id='publicworkouts'>Public Workouts</button></li>
-	 <li><button type='button' id='login'>Login</button></li>
-	 <li><button type='button' id='about'>About</button></li>
- 
-       </ul>
-		-->
+
 		<div type="nav">
+		    <div type="LHead">
+		    <img src='cooltext245878063780206.png'>
+		    </div>
+		    <div type="RHead">
 		<ul>
 			<li><a href='about.html'>About</a></li>
 
@@ -93,20 +95,16 @@ font-size: 3em;
 			<li> <a href="paceindex.html">Pace Calculator (Beta)</a></li>
 		</ul>
 		</div>
-<img src='welcome.png'>
+		</div>
+	
+
     <h1> </h1>
    <img src='swimmer.jpg' hight='355' width='370'>
 	
 
-   </header>
+
 		
-   <a href='about.html'>About</a>
-	  <p></p>
-	  <a href='publicworkouts/home.html'>Public Workouts</a>
-	  <p></p>
-	  <a href='privatelogin.html'>Login</a>
-	  <p></p>
-	  <a href="paceindex.html">Pace Calculator (Beta)</a>
+  
  
 <h4>New to swim sets? Create an account or login as a guest!</h4>
  <!-- start of freefind search box html -->
