--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@ font-size: 3em;
     </style>
 </head>
 <body>
-    <script language='javascript'>
-       
-    </script>
+  
 
 
 		<div type="nav">
@@ -85,15 +83,15 @@ font-size: 3em;
 		    <img src='cooltext245878063780206.png'>
 		    </div>
 		    <div type="RHead">
-		<ul>
-			<li><a href='about.html'>About</a></li>
+	
+			<a href='about.html'>About</a>
 
-			<li> <a href='publicworkouts/home.html'>Public Workouts</a></li>
+		 <a href='publicworkouts/home.html'>Public Workouts</a>
 
-			<li> <a href='privatelogin.html'>Login</a></li>
+		 <a href='privatelogin.html'>Login</a>
 
-			<li> <a href="paceindex.html">Pace Calculator (Beta)</a></li>
-		</ul>
+		<a href="paceindex.html">Pace Calculator (Beta)</a>
+	
 		</div>
 		</div>
 	
