--- a/index.html
+++ b/index.html
@@ -62,37 +62,39 @@ Swim Sets
 h4 {
 font-size: 3em;	
 	 }
-		.nav {
+		.header {
 		background: white;
-			display: inline;
+			display: block;
+			height: 45px;
+			position: relative;
 	 }
-	 .LHead {
-	     text-align: left;
+	 .HeadL {
+	     float: left;
 	 }
-	 .RHead {
-	     text-align: right;
-	 }
+	  ul {
+	      float: right;
+	  }
     </style>
 </head>
 <body>
   
 
 
-		<div type="nav">
-		    <div type="LHead">
-		    <img src='cooltext245878063780206.png'>
+		<div type="Header">
+		    <div type="HeadL">
+		    <img src='cooltext245878063780206.png' class="HeadL">
 		    </div>
-		    <div type="RHead">
+		   
+	<ul>
+		<li>	<a href='about.html'>About</a></li>
+
+	<li>	 <a href='publicworkouts/home.html'>Public Workouts</a></li>
+
+	<li>	 <a href='privatelogin.html'>Login</a></li>
+
+	<li>	<a href="paceindex.html">Pace Calculator (Beta)</a></li>
+	</ul>
 	
-			<a href='about.html'>About</a>
-
-		 <a href='publicworkouts/home.html'>Public Workouts</a>
-
-		 <a href='privatelogin.html'>Login</a>
-
-		<a href="paceindex.html">Pace Calculator (Beta)</a>
-	
-		</div>
 		</div>
 	
 
