--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@ h4 {
 font-size: 3em;	
 	 }
 		.header {
-		background: white;
+		background-color: #ffffff;
 			display: block;
 			height: 45px;
 			position: relative;
+			width: 100%;
 	 }
 	 .HeadL {
 	     float: left;
@@ -98,9 +99,9 @@ font-size: 3em;
 		</div>
 	
 
- 
+<div class="Top">
    <img src='swimmer.jpg' hight='355' width='370'>
-	
+	</div>
 
 
 		
