--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@ font-size: 3em;
 	      height: 355px;
 	      position: relative;
 	  }
+	 img.clear {
+		 clear: both;
+	 }
     </style>
 </head>
 <body>
@@ -105,7 +108,7 @@ font-size: 3em;
 	
 
 <div class="Top">
-   <img src='swimmer.jpg' hight='355' width='370'>
+   <img src='swimmer.jpg' hight='355' width='370' class="clear">
 	</div>
 
 
