--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@ Swim Sets
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-88418252-1', 'auto');
   ga('send', 'pageview');
-
 </script>
  <style>
        ul {
@@ -37,7 +35,6 @@ Swim Sets
      body {
          background: url('https://phenomenex.files.wordpress.com/2016/01/water.jpg');
     text-align: center;
-
      }
      img {
          display: inline;
@@ -55,7 +52,6 @@ Swim Sets
     position: relative;
     display: inline-block;
 }
-
 .dropdown:hover .dropdown-content {
     display: block;
 }
@@ -80,7 +76,7 @@ font-size: 3em;
 	      height: 355px;
 	
 	  }
-	 .clear {
+	.clear {
 		 clear: both;
 	 }
     </style>
@@ -107,8 +103,8 @@ font-size: 3em;
 		</div>
 	
 
-<div class="Top">
-   <img src='swimmer.jpg' hight='355' width='370' class="clear">
+<div class="Top clear">
+   <img src='swimmer.jpg' hight='355' width='370' >
 	</div>
 
 
