--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Swim Sets
  <style>
        ul {
       padding: 10px;
-        background-color: white;
+        
       
     }
     li {
@@ -58,8 +58,8 @@ Swim Sets
 h4 {
 font-size: 3em;	
 	 }
-		.header {
-		background-color: #ffffff;
+		#nav {
+		background-color: white;
 			display: block;
 			height: 45px;
 			position: relative;
@@ -85,7 +85,7 @@ font-size: 3em;
   
 
 
-		<div type="Header">
+		<div type="Header" id="nav">
 		    <div type="HeadL">
 		    <img src='cooltext245878063780206.png' class="HeadL">
 		    </div>
