--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ Swim Sets
     }
     li {
       display: inline;
+     
       
     }
     a {
@@ -38,6 +39,7 @@ Swim Sets
      }
      img {
          display: inline;
+         text-size: 1.5em;
      }
 	 .dropdown-content {
     display: none;
@@ -61,7 +63,7 @@ font-size: 3em;
 		#nav {
 		background-color: white;
 			display: block;
-			height: 45px;
+			height: 60px;
 			position: relative;
 			width: 100%;
 	 }
