--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Swim Sets
      }
      img {
          display: inline;
-         text-size: 1.5em;
+         text-size: 3em;
      }
 	 .dropdown-content {
     display: none;
@@ -66,6 +66,7 @@ font-size: 3em;
 			height: 60px;
 			position: relative;
 			width: 100%;
+			box-shadow: 7px 5px 5px #828589;
 	 }
 	 .HeadL {
 	     float: left;
