--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@ Swim Sets
     }
     li {
       display: inline;
-     text-size: 2.5em;
+
       
     }
     a {
         color: black;
+        text-size: 50px;
      }
      body {
          background: url('https://phenomenex.files.wordpress.com/2016/01/water.jpg');
