--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Swim Sets
     }
     a {
         color: black;
-        text-size: 50px;
+        font-size: 1.2em;
      }
      body {
          background: url('https://phenomenex.files.wordpress.com/2016/01/water.jpg');
