--- a/publicworkouts/publicfree.html
+++ b/publicworkouts/publicfree.html
@@ -47,7 +47,8 @@ body {
     </p><p>  100 easy choice
     </p>
      
-        <a id="downloadLink" href="Freestylesets.txt">Download these sets</a>.    
+        <a id="downloadLink" href="Freestylesets.txt">Download these sets</a>.  
+      <a id="downloadLink" href="WillFree.txt"> Download a set that trains for for your 100 free!</a>
                  </body>
                  </html>
 
